Fix overlapping of button/dialog

--- a/source.scss
+++ b/source.scss
@@ -170,8 +170,8 @@ $dark: true;
   bottom: 0;
   right: 0;
   z-index: 50;
-  margin: 17.5px;
-  padding: 10.5px;
+  margin: 23.5px;
+  padding: 15.5px;
   border-radius: 50%;
   height: 48px;
   background: $primary;
